syntax = "proto3";

package shipping;

option go_package = "grpc/proto/shipping";

// The request and response messages for starting shipping
message ShippingRequest {
  string order_id = 1;
  string address = 2;
}

message ShippingResponse {
  string shipment_id = 1;
  string status = 2; // Possible statuses: PENDING, SHIPPED, CANCELLED
}

// The shipping service definition
service ShippingService {
  rpc StartShipping(ShippingRequest) returns (ShippingResponse);
}